--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.7.2</version>
+        </dependency>
     </dependencies>
 
     <build>
